@@ -1,4 +1,8 @@
-22 Jan 2015: anyproxy 3.1.1:
+28 Jan 2015: anyproxy 3.1.2:
+
+    * thanks to iconv-lite, almost webpage with any charset can be correctly decoded in web interface.
+
+28 Jan 2015: anyproxy 3.1.1:
 
     * convert GBK to UTF8 in web interface
 
